--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="pop_up_content">
-                <div class="pop_up_smartphone">
+                <div class="pop_up_smartphone6">
                     <img src="picture/Mock-up.png">
                 </div>
                 <div class="pop_up_texte">
